test/types/integral/int-coerce-arg.good
int-coerce-arg.chpl:5: In function 'accept2':
int-coerce-arg.chpl:6: error: unresolved call 'acceptIntRef(int(8))'
int-coerce-arg.chpl:1: note: candidates are: acceptIntRef(ref arg: int)
